--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -271,9 +271,315 @@
     "\n",
     "因此，Validation Dataset的分離就是避免讓Model在Training階段看到要驗證的資料，所以更能正確的評估Model的好壞。但不幸的是，在人為調整Model的過程當中，我們會去調整參數讓Validation Dataset的Error可以降低，這樣的作法無形之中已經將Validation Dataset的資訊間接的經由人傳給了Model，所以為了避免這樣的情形，因此在最後挑選Models時，我們使用另外一筆從沒看過的資料Testing Dataset來做挑選。\n",
     "\n",
+    "## Tensorflow工作流程\n",
+    "\n",
+    "我們這一篇將會使用Tensorflow實作最簡單的單層Neurel Network，在這之前我們來看看Tensorflow是如何運作的？\n",
+    "\n",
+    "深度學習是由一層一層可以微分的神經元所連接而成，數學上可以表示為張量(Tensor)的表示式，我們一般講的矩陣運算是指2x2的矩陣運算，而張量(Tensor)則是拓寬到n維做計算，在Machine Learning當中我們常常需要處理到相當高維度的計算，例如：有五張28x28的彩色圖的表示就必須使用到四維張量，第一維表示第幾張、第二、三維表示圖片的大小、第四維則表示RGB，如果你是物理系的學生應該也不陌生，廣義相對論裡頭大量的使用四維張量運算，三維空間加一維時間。另外，我們會根據需求不同設計不同形式的Neurel Network，我們必須為Model設計一個合理的流程(Flow)，再用數據來訓練我的Model。所以，這就是Tensorflow命名由來：Tensor+Flow。\n",
+    "\n",
+    "因此，一開始要先設計Model的結構，這在Tensorflow裡頭稱為Graph，在Graph裡頭我們可以事先定義出Neurel Network怎麼連接？定義哪一些窗口是可以由外部置放數據的？定義哪一些變數是可以被訓練的？哪一些變數是不可以被訓練的？定義我要將要怎麼樣優化？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_graph = tf.Graph() # Initialize a new graph\n",
+    "\n",
+    "with my_graph.as_default(): # Create a scope to build graph\n",
+    "    # ...\n",
+    "    # detail of building graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Graph只是一個結構，它不具有有效的資訊，而當我們定義完成Graph之後，接下來我們需要創造一個環境叫做Session，Session會將Graph的結構複製一份，然後就可以進行Training或是預測等等，Session就已經是具有有效的資訊了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session(graph=my_graph) as sess: # Copy graph into session\n",
+    "    # ...\n",
+    "    # detail of doing machine learning  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "還有另外一種寫法也是相同作用的，我個人比較喜歡下面這種寫法。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_session = tf.Session(graph=my_graph)\n",
+    "my_session.run(...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tensorflow的基本「張量」元素\n",
+    "\n",
+    "接下來我們就來看看有哪些構成Graph的基本元素可以使用。\n",
+    "\n",
+    "(1) 常數張量：\n",
+    "一開始來看看「常數張量」，常數指的是在Model中不會改變的數值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor = tf.constant([1, 2, 3, 4, 5, 6, 7], dtype=tf.int32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(2) 變數張量：\n",
+    "那與常數截然不同的就是變數，「變數張量」是指在訓練當中可以被改變的值，一般「變數張量」會用作於Machine Learning需要被訓練的參數，如果你沒有特別設定，在Optimalization中，Tensorflow會自動調整「變數張量」的數值來最佳化。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor = tf.Variable( tf.truncated_normal(shape=(3,5)) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因為變數通常是我們未知的參數，所以我們一般會使用Initalizer來設定它的初始值，`tf.truncated_normal(shape=(3,5))`會隨機產生大小3x5的矩陣，而它的值呈常態分佈但只取兩個標準差以內的數值。\n",
+    "\n",
+    "如果今天你想要有一個「變數張量」但是又不希望它因為最佳化而改變，這時你要特別指定。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor = tf.Variable(5, trainable=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(3) 置放張量：\n",
+    "另外有一些張量要負責擔任窗口的角色，稱為Placeholder，這類的張量通常用來放置Data。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor = tf.placeholder(tf.float32, shape=(None,1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因為我們在訓練之前還尚未知道Data的數量，所以這裡使用None來表示未知。`tf.placeholder`在Graph階段是沒有數值的，必須等到Session階段才將數值給輸入進去。\n",
+    "\n",
+    "(4) 操作型張量：\n",
+    "這類張量並不含有實際數值，而是做一件事，常用的「操作型張量」有兩個，第一種作為最佳化使用，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = ...\n",
+    "train_op = tf.train.GradientDescentOptimizer(learning_rate=0.5).minimize(loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "選擇Optimizer和最佳化的方式來定義最佳化的操作方法，上述的例子是使用learning_rate為0.5的Gradient Descent來降低loss。\n",
+    "另外一個是作為初始化的操作，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_op = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "這一個步驟是必要的但常常被忽略，還記得剛剛我們定義「變數張量」時有用到Initalizer，這些Initalizer在Graph完成時還不具有數值，必須使用`init_op`來給予數值，所以記住一定要放`init_op`進去Graph裡頭，而且必須先定義完成所有會用到的Initalizer再設定這個`init_op`。\n",
+    "\n",
+    "## Session的操作\n",
+    "\n",
+    "「張量」元素具有兩個面向：功能和數值，Graph中的「張量」並不具有數值，只有在Session階段才有數值，那如何將數值取出來呢？有兩種方法，以1+1當作範例來看看，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Add:0\", shape=(), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "g1 = tf.Graph()\n",
+    "with g1.as_default():\n",
+    "    x = tf.constant(1)\n",
+    "    y = tf.constant(1)\n",
+    "    sol = tf.add(x,y) # add x and y\n",
+    "\n",
+    "with tf.Session(graph=g1) as sess: \n",
+    "    print(sol) # print tensor, not their value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session(graph=g1) as sess: \n",
+    "    print(sol.eval()) # evaluate their value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = tf.Session(graph=g1)\n",
+    "print(s1.run(sol)) # another way of evaluating value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "那如果我想使用placeholder來做到x+y呢？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "g2 = tf.Graph()\n",
+    "with g2.as_default():\n",
+    "    x = tf.placeholder(tf.int32)\n",
+    "    y = tf.placeholder(tf.int32)\n",
+    "    sol = tf.add(x,y) # add x and y\n",
+    "\n",
+    "s2 = tf.Session(graph=g2)\n",
+    "\n",
+    "# if x = 2 and y = 3\n",
+    "print(s2.run(sol,feed_dict={x: 2,y: 3})) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if x = 5 and y = 7\n",
+    "print(s2.run(sol,feed_dict={x: 5,y: 7})) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因為x和y是placeholder，所以必須使用`feed_dict`來餵入相關資訊，否則會報錯。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 第一個Tensorflow Model\n",
     "\n",
-    "以下我把這個Model寫成一個`class`，先瞄一眼我後續再慢慢的解釋。"
+    "有了以上的認識我們就可以來建立我們第一個Model。\n",
+    "\n",
+    "以下我會使用物件導向的寫法，讓程式碼更有條理。\n",
+    "\n",
+    "Machine Learning在操作上可以整理成三個大步驟：建構(Building)、訓練(Fitting)和推論(Inference)，所以我們用採用這三大步驟來建製我們的Model。\n",
+    "\n",
+    "在`SimpleLogisticClassification`裡頭，「建構」的動作在`__init__`中會進行，由`build`函式來建立Graph，並且將Neurel Network的結構存於`structure`裡。「訓練」的動作在`fit`中進行，這裡採用最傳統的Gradient Descent的方法，將所有Data全部考慮進去最佳化，未來會再介紹Batch Gradient Descent。最後，「推論」的部分在`predict`和`evaluate`中進行。"
    ]
   },
   {
@@ -286,11 +592,28 @@
     "    def __init__(self,n_features,n_labels,learning_rate=0.5):\n",
     "        self.n_features = n_features\n",
     "        self.n_labels = n_labels\n",
-    "        self.graph = tf.Graph()\n",
-    "        self.build(learning_rate)\n",
-    "        self.sess = tf.Session(graph=self.graph)\n",
     "        \n",
+    "        self.graph = tf.Graph() # initialize new graph\n",
+    "        self.build(learning_rate) # building graph\n",
+    "        self.sess = tf.Session(graph=self.graph) # create session by the graph\n",
+    "    \n",
+    "    def structure(self,features,labels):\n",
+    "        # build neurel network structure and return their predictions and loss\n",
+    "        \n",
+    "        # one fully connected layer\n",
+    "        logits = self.getDenseLayer(features,self.weights['fc1'],self.biases['fc1'])\n",
+    "        \n",
+    "        # predictions\n",
+    "        y_ = tf.nn.softmax(logits)\n",
+    "        \n",
+    "        # loss: softmax cross entropy\n",
+    "        loss = tf.reduce_mean(\n",
+    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels,logits=logits))\n",
+    "\n",
+    "        return (y_,loss)     \n",
+    "    \n",
     "    def build(self,learning_rate):\n",
+    "        # Building Graph\n",
     "        with self.graph.as_default():\n",
     "            ### Input\n",
     "            self.train_features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
@@ -305,9 +628,10 @@
     "            } \n",
     "            \n",
     "            ### Optimalization\n",
+    "            # build neurel network structure and get their predictions and loss\n",
     "            self.y_,self.loss = self.structure(features=self.train_features,\n",
     "                                                        labels=self.train_labels)\n",
-    "            \n",
+    "            # define training operation\n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
     "            \n",
     "            ### Prediction\n",
@@ -318,17 +642,9 @@
     "            \n",
     "            ### Initialization\n",
     "            self.init_op = tf.global_variables_initializer()\n",
-    "            \n",
-    "    def structure(self,features,labels):\n",
-    "        logits = self.getDenseLayer(features,self.weights['fc1'],self.biases['fc1'])\n",
-    "        \n",
-    "        y_ = tf.nn.softmax(logits)\n",
-    "        loss = tf.reduce_mean(\n",
-    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels,logits=logits))\n",
-    "\n",
-    "        return (y_,loss)\n",
     "    \n",
     "    def getDenseLayer(self,input_layer,weight,bias,activation=None):\n",
+    "        # fully connected layer\n",
     "        x = tf.add(tf.matmul(input_layer,weight),bias)\n",
     "        if activation:\n",
     "            x = activation(x)\n",
@@ -342,7 +658,7 @@
     "        for epoch in range(epochs):\n",
     "            print(\"Epoch %2d/%2d: \"%(epoch+1,epochs))\n",
     "            \n",
-    "            # batch gradient descent\n",
+    "            # fully gradient descent\n",
     "            feed_dict = {self.train_features: X, self.train_labels: y}\n",
     "            _ = self.sess.run(self.train_op, feed_dict=feed_dict)\n",
     "            \n",
@@ -380,15 +696,6 @@
     "        if len(ndarray.shape)==1: ndarray = np.reshape(ndarray,(1,ndarray.shape[0]))\n",
     "        return ndarray\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "使用物件導向的寫法，可以讓程式看起來更有條理，在這裡我就把我要訓練的Model物件化。\n",
-    "\n",
-    "`SimpleLogisticClassification`包含6個部分，一開始在`def __init__(...)`中先初始化這個Model，接下來在`def __structure(...)`裡頭定義Model的結構，然後使用`def fit(...)`來做Training，而`def accuracy(...)`用來計算正確率，最後兩個函數`def predict(...)`和`def evaluate(...)`則是用來推演用的。"
    ]
   },
   {
@@ -434,20 +741,6 @@
     "          validation_data=(valid_data.images,valid_data.labels),\n",
     "          test_data=(test_data.images,test_data.labels), )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
