--- a/tutorial/03_Build_CNN.ipynb
+++ b/tutorial/03_Build_CNN.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "(2) 平移性：通常一張圖任意平移並不影響它的意義，一隻鳥不管是放在圖片的左上角還是右下角，牠都是一隻鳥。\n",
     "\n",
-    "(3) 縮放性：通常一張圖我把它等比例的放大縮小是不影響它的意義的，以Pixel的觀點來看放大縮小，縮小其實就是固定間格的拿掉一行和一列，而放大就是固定間格的插入與相鄰數值相近的一行和一列。\n",
+    "(3) 縮放性：通常一張圖我把它等比例的放大縮小是不影響它的意義的。\n",
     "\n",
-    "![影像特性]()"
+    "![影像特性](https://raw.githubusercontent.com/GitYCC/Tensorflow_Tutorial/master/img/TensorflowTutorial.004.jpeg)"
    ]
   },
   {
@@ -51,18 +51,71 @@
     "\n",
     "我們需要引入新的架構來處理影像，讓它可以擁有以上三種特性，Convolutional Neurel Network (CNN)此時就登場了，CNN有兩大新要素：Convolution Layer和Pooling Layer，Convolution Layer為我們的Model添加了局域性和平移性，而Pooling Layer則讓Model擁有縮放的特性。\n",
     "\n",
-    "![Convolution Layer和Pooling Layer]()\n",
+    "![Convolution Layer和Pooling Layer](https://raw.githubusercontent.com/GitYCC/Tensorflow_Tutorial/master/img/TensorflowTutorial.005.jpeg)\n",
     "\n",
-    "Convolution Layer是由Filters所構成的，Filters可以想像是一張小圖，以上面的例子，Filter是一個鳥嘴的小圖，這張小圖要怎麼去過濾原圖呢？答案是使用Convolution(卷積)，把小圖疊到大圖的任意位置，接下來將大圖小圖對到的相應元素相乘起來再加總一起，然後在另外一張表格中填入這個加總值，接下來移動Filter，重複的動作再做一次，如此循環並將值陸續填入表格中，這表格最後就會像是另外一張圖一樣，你可以拿這張圖繼續做下去。\n",
+    "Convolution Layer是由Filters所構成的，Filters可以想像是一張小圖，以上面的例子，Filter是一個鳥嘴的小圖，這張小圖要怎麼去過濾原圖呢？答案是使用Convolution(卷積)，把小圖疊到大圖的任意位置，接下來將大圖小圖對到的相應元素相乘起來再加總一起，然後在另外一張表格中填入這個加總值，接下來移動Filter，重複的動作再做一次，如此循環並將值陸續填入表格中，這表格最後就會像是另外一張圖一樣，而這張圖可以繼續串另外的Neurel Network，這就是Convolution Layer的計算方法。\n",
     "\n",
-    "Convolution的過程造成怎麼樣的效果呢？當Filter是一個鳥嘴的小圖，一旦遇到與鳥嘴相似的局部，此時加總的值會是一個大的值，如果是一個和鳥嘴無關的局部此時的值會是一個小的值，所以這個Filter的確具有將特定特徵篩選出來的能力，因此局部的特徵變得是有意義的，此時我的Model就具有局域性，而且藉由Filter的平移，所以Model也就自然而然的具有平移的特性。\n",
+    "舉個例子，假設我今天有矩陣A：\n",
     "\n",
-    "\n"
+    "[[1, 2, 3, 4],<br/>\n",
+    " [4, 5, 6, 7],<br/>\n",
+    " [7, 8, 9,10],<br/>\n",
+    " [1, 3, 5, 7]]\n",
+    "\n",
+    "然後再有一個Filter：\n",
+    "\n",
+    "[[1, 0, 0],<br/>\n",
+    " [0, 1, 0],<br/>\n",
+    " [0, 0, 0]]\n",
+    "\n",
+    "使用Filter對A做Convolution得到B為：\n",
+    "\n",
+    "[[6, 8 ],<br/>\n",
+    " [12,14]]\n",
+    " \n",
+    "原本3x3的矩陣做了Convolution後變成了2x2的矩陣，原因在於邊界限制了Filter的移動，那如果我想要讓Convolution玩的矩陣維持在3x3，怎麼做？我們可以在邊緣的地方鋪上0就可以達到這樣的效果，來試試看，先將矩陣A擴張成矩陣C：\n",
+    "\n",
+    "[[0, 0, 0, 0, 0, 0],<br/>\n",
+    " [0, 1, 2, 3, 4, 0],<br/>\n",
+    " [0, 4, 5, 6, 7, 0],<br/>\n",
+    " [0, 7, 8, 9,10, 0],<br/>\n",
+    " [0, 1, 3, 5, 7, 0],<br/>\n",
+    " [0, 0, 0, 0, 0, 0]]\n",
+    " \n",
+    "再使用Filter對C做Convolution得到D為：\n",
+    "\n",
+    "[[1, 2, 3, 4],<br/>\n",
+    " [4, 6, 8,10],<br/>\n",
+    " [7,12,14,16],<br/>\n",
+    " [1,10,13,16]]\n",
+    " \n",
+    "這個時候就是一個4x4的矩陣。\n",
+    "\n",
+    "Convolution的過程造成怎麼樣的效果呢？當Filter是一個鳥嘴的小圖，一旦遇到與鳥嘴相似的局部，此時加總的值會是一個大的值，如果是一個和鳥嘴無關的局部此時的值會是一個小的值，所以這個Filter具有將特定特徵篩選出來的能力，因此局部的特徵變得是有意義的，此時我的Model就具有局域性，而且藉由Filter的平移掃視，這個特徵就具有可平移的特性。\n",
+    "\n",
+    "Convolution Layer不同於Fully-connected Layer有兩點，第一，每個Pixels間有相對的距離關係，擁有上下左右的關係才有辦法構成一張圖，第二，除了有距離上的關係以外，它還能在有限範圍內抓出一種特徵模式，所以我們將可以使用影像的語言來做特徵轉換和抓取特徵。\n",
+    "\n",
+    "實際情況下，Filter上的Weights是會自行調整的，Model Fitting的時候，Model會根據數據自行訓練出Filter，也就是說機器可以自行學習出圖片的特徵。通常這樣的Filters會有好幾個，讓機器可以有更多維度可以學習。\n",
+    "\n",
+    "接下來來看Pooling Layer如何讓Model擁有檢視縮放的特性？\n",
+    "\n",
+    "先來看在影像上如何做到放大縮小，以Pixels的觀點來看，最簡單的放大方法是，在每個既有的Pixels附近增加一些與它們相似的新Pixel，這樣做就像是將原本的小圖直接拉成大圖，畫質雖然很差，不過這是最簡單的放大方法。那麼縮小就相反操作，把一群附近的Pixels濃縮成一個Pixel當作代表，就可以達到縮小圖片的效果。\n",
+    "\n",
+    "所以回到Pooling Layer的討論，Pooling做的事情就是在縮小圖片，例如我使用2x2來做Pooling，它會在原圖上以2x2來掃描，所以會有四個元素被檢視，我將會從這四個值當中產生一個值，如果是Max Pooling就是從四個中選最大的那個，如果是Average Pooling則是平均四個值得到平均值，通常如果是2x2的Pooling我們會以每2格一跳的方式掃視，如果是3x3則會以每3格一跳，以此類推。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convolution Layer\n",
+    "\n",
+    "來看一下Tensorflow如何實作Convolution Layer。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +127,139 @@
     "\n",
     "# Config the matplotlib backend as plotting inline in IPython\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of conv:\n",
+      "(1, 4, 4, 1)\n",
+      "Conv:\n",
+      "[[[[ 14.]\n",
+      "   [  2.]\n",
+      "   [  0.]\n",
+      "   [  3.]]\n",
+      "\n",
+      "  [[  3.]\n",
+      "   [  0.]\n",
+      "   [  2.]\n",
+      "   [ 14.]]\n",
+      "\n",
+      "  [[  3.]\n",
+      "   [  0.]\n",
+      "   [  6.]\n",
+      "   [  6.]]\n",
+      "\n",
+      "  [[  1.]\n",
+      "   [  0.]\n",
+      "   [  2.]\n",
+      "   [  1.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    img =tf.constant([[[[1],[2],[0],[0],[0]],\n",
+    "                       [[3],[0],[0],[1],[2]],\n",
+    "                       [[0],[0],[0],[3],[0]],\n",
+    "                       [[1],[0],[0],[1],[0]],\n",
+    "                       [[0],[0],[0],[0],[0]]]],tf.float32)\n",
+    "    # shape of img: [batch, in_height, in_width, in_channels]\n",
+    "    \n",
+    "    filter_ = tf.constant([[[[1]],[[2]]],\n",
+    "                           [[[3]],[[0]]]],tf.float32)\n",
+    "    # shape of filter: [filter_height, filter_width, in_channels, out_channels]\n",
+    "    \n",
+    "    conv_strides = (1,1)\n",
+    "    padding_method = 'VALID'\n",
+    "    \n",
+    "    conv = tf.nn.conv2d(img, filter_, \n",
+    "                        strides=[1,conv_strides[0],conv_strides[1],1], \n",
+    "                        padding=padding_method)\n",
+    "    print(\"Shape of conv:\")\n",
+    "    print(conv.eval().shape)\n",
+    "    print(\"Conv:\")\n",
+    "    print(conv.eval())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先一開始是圖片`img`的部分，Rank為4，每個維度分別為`[batch, in_height, in_width, in_channels]`，in_channels的部分一般是RGB，這邊我採用和MNIST相同的灰階表示，所以in_channels只有1個維度。\n",
+    "\n",
+    "`filter_`的部分Rank為4，每個維度分別為`[filter_height, filter_width, in_channels, out_channels]`，當如果我想要使用多個filters的時候，我的out_channels就不只1而已，如果有RGB的話，in_channels則會是3。\n",
+    "\n",
+    "接下來來看一下`tf.nn.conv2d`裡頭的參數`strides`，這可能會讓人感到困惑，它的設定值是`[1,conv_strides[0],conv_strides[1],1]`，我特別把第二、三項額外用`conv_strides`來表示，因為這兩個值才是真正代表在圖片上平移每步的距離，那第一項和最後一項的1代表什麼意義呢？是這樣的，Tensorflow是站在維度的角度看平移這件事情，這四個維度分別表示`[batch, in_height, in_width, in_channels]`的移動量，所以一般情況下只有`in_height`和`in_width`需要指定平移的距離。\n",
+    "\n",
+    "最後一個參數就是`padding`，有兩種可以選擇，分別為`VALID`和`SAME`，`VALID`指的就是沒有額外鋪上0的邊界的情形，`SAME`則是額外鋪上0的邊界，並且使得輸出的維度和輸入一樣。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pooling Layer\n",
+    "\n",
+    "接下來來看Tensorflow如何實作Pooling Layer。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of pooling:\n",
+      "(1, 2, 2, 1)\n",
+      "Pooling:\n",
+      "[[[[ 3.]\n",
+      "   [ 1.]]\n",
+      "\n",
+      "  [[ 1.]\n",
+      "   [ 3.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    img =tf.constant([[[[1],[2],[0],[0]],\n",
+    "                       [[3],[0],[0],[1]],\n",
+    "                       [[0],[0],[0],[3]],\n",
+    "                       [[1],[0],[0],[1]]]],tf.float32)\n",
+    "    # shape of img: [batch, in_height, in_width, in_channels]\n",
+    "    \n",
+    "    pooling = tf.nn.max_pool(img,\n",
+    "                    ksize=[1,2,2,1],strides=[1,2,2,1],padding='VALID')\n",
+    "    print(\"Shape of pooling:\")\n",
+    "    print(pooling.eval().shape)\n",
+    "    print(\"Pooling:\")\n",
+    "    print(pooling.eval())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`tf.nn.max_pool`的參數中`ksize`代表kernel size，也就是要Pooling的大小，一樣依照Input layer的Rank去配置，還有`strides`決定平移的方法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 最簡單的CNN架構：LeNet5\n",
+    "\n",
+    "![LeNet5](https://raw.githubusercontent.com/GitYCC/Tensorflow_Tutorial/master/img/TensorflowTutorial.006.jpeg)"
    ]
   },
   {
