--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -8,8 +8,27 @@
     "\n",
     "初次學習Tensorflow最困難的地方莫過於不知道從何下手，已經學會很多的Deep Learning理論，但是要自己使用Tensorflow將Network建起來卻是非常困難的，這篇文章我會先簡單的介紹幾個Tensorflow的概念，最後利用這些概念建立一個簡單的分類模型。\n",
     "\n",
-    "本單元程式碼可於[Github]( https://github.com/GitYCC/Tensorflow_Tutorial/blob/master/code/01_simple_logistic_classification_on_MNIST.py)下載。\n",
+    "本單元程式碼可於[Github]( https://github.com/GitYCC/Tensorflow_Tutorial/blob/master/code/01_simple_logistic_classification_on_MNIST.py)下載。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Config the matplotlib backend as plotting inline in IPython\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### MNIST Dataset\n",
     "\n",
     "首先，先`import`一些會用到的function，並且定義`summary` function以便於觀察ndarray。"
@@ -21,22 +40,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Config the matplotlib backend as plotting inline in IPython\n",
-    "%matplotlib inline\n",
-    "\n",
     "def summary(ndarr):\n",
     "    print(ndarr)\n",
-    "    print(\"* shape: {}\".format(ndarr.shape))\n",
-    "    print(\"* min: {}\".format(np.min(ndarr)))\n",
-    "    print(\"* max: {}\".format(np.max(ndarr)))\n",
-    "    print(\"* avg: {}\".format(np.mean(ndarr)))\n",
-    "    print(\"* std: {}\".format(np.std(ndarr)))\n",
-    "    print(\"* unique: {}\".format(np.unique(ndarr)))"
+    "    print('* shape: {}'.format(ndarr.shape))\n",
+    "    print('* min: {}'.format(np.min(ndarr)))\n",
+    "    print('* max: {}'.format(np.max(ndarr)))\n",
+    "    print('* avg: {}'.format(np.mean(ndarr)))\n",
+    "    print('* std: {}'.format(np.std(ndarr)))\n",
+    "    print('* unique: {}'.format(np.unique(ndarr)))"
    ]
   },
   {
@@ -68,7 +79,7 @@
    ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
+    "mnist = input_data.read_data_sets('MNIST_data/', one_hot=True)\n",
     "\n",
     "train_data = mnist.train\n",
     "valid_data = mnist.validation\n",
@@ -293,11 +304,11 @@
     "def softmax(x):\n",
     "    # avoid exp function go to too large,\n",
     "    # pre-reduce before applying exp function\n",
-    "    max_score = np.max(x,axis=0)\n",
+    "    max_score = np.max(x, axis=0)\n",
     "    x = x - max_score\n",
     "    \n",
     "    exp_s = np.exp(x)\n",
-    "    sum_exp_s = np.sum(exp_s,axis=0)\n",
+    "    sum_exp_s = np.sum(exp_s, axis=0)\n",
     "    softmax = exp_s / sum_exp_s\n",
     "    return softmax\n",
     "\n",
@@ -426,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor = tf.Variable( tf.truncated_normal(shape=(3,5)) )"
+    "tensor = tf.Variable(tf.truncated_normal(shape=(3, 5)))"
    ]
   },
   {
@@ -462,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor = tf.placeholder(tf.float32, shape=(None,1000))"
+    "tensor = tf.placeholder(tf.float32, shape=(None, 1000))"
    ]
   },
   {
@@ -605,7 +616,7 @@
     "s2 = tf.Session(graph=g2)\n",
     "\n",
     "# if x = 2 and y = 3\n",
-    "print(s2.run(sol,feed_dict={x: 2,y: 3})) "
+    "print(s2.run(sol, feed_dict={x: 2, y: 3})) "
    ]
   },
   {
@@ -623,7 +634,7 @@
    ],
    "source": [
     "# if x = 5 and y = 7\n",
-    "print(s2.run(sol,feed_dict={x: 5,y: 7})) "
+    "print(s2.run(sol, feed_dict={x: 5, y: 7})) "
    ]
   },
   {
@@ -658,118 +669,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SimpleLogisticClassification(object):\n",
-    "    def __init__(self,n_features,n_labels,learning_rate=0.5):\n",
+    "class SimpleLogisticClassification:\n",
+    "\n",
+    "    def __init__(self, n_features, n_labels, learning_rate=0.5):\n",
     "        self.n_features = n_features\n",
     "        self.n_labels = n_labels\n",
-    "        \n",
+    "\n",
     "        self.weights = None\n",
-    "        self.biases  = None\n",
-    "        \n",
-    "        self.graph = tf.Graph() # initialize new graph\n",
-    "        self.build(learning_rate) # building graph\n",
-    "        self.sess = tf.Session(graph=self.graph) # create session by the graph     \n",
-    "    \n",
-    "    def build(self,learning_rate):\n",
+    "        self.biases = None\n",
+    "\n",
+    "        self.graph = tf.Graph()  # initialize new graph\n",
+    "        self.build(learning_rate)  # building graph\n",
+    "        self.sess = tf.Session(graph=self.graph)  # create session by the graph\n",
+    "\n",
+    "    def build(self, learning_rate):\n",
     "        # Building Graph\n",
     "        with self.graph.as_default():\n",
     "            ### Input\n",
-    "            self.train_features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
-    "            self.train_labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
-    "            \n",
+    "            self.train_features = tf.placeholder(tf.float32, shape=(None, self.n_features))\n",
+    "            self.train_labels = tf.placeholder(tf.int32, shape=(None, self.n_labels))\n",
+    "\n",
     "            ### Optimalization\n",
     "            # build neurel network structure and get their predictions and loss\n",
-    "            self.y_,self.loss = self.structure(features=self.train_features,\n",
-    "                                                        labels=self.train_labels)\n",
+    "            self.y_, self.loss = self.structure(features=self.train_features,\n",
+    "                                                labels=self.train_labels)\n",
     "            # define training operation\n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
-    "            \n",
+    "\n",
     "            ### Prediction\n",
-    "            self.new_features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
-    "            self.new_labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
-    "            self.new_y_,self.new_loss = self.structure(features=self.new_features,\n",
-    "                                                       labels=self.new_labels,)\n",
-    "            \n",
+    "            self.new_features = tf.placeholder(tf.float32, shape=(None, self.n_features))\n",
+    "            self.new_labels = tf.placeholder(tf.int32, shape=(None, self.n_labels))\n",
+    "            self.new_y_, self.new_loss = self.structure(features=self.new_features,\n",
+    "                                                        labels=self.new_labels)\n",
+    "\n",
     "            ### Initialization\n",
     "            self.init_op = tf.global_variables_initializer()\n",
-    "            \n",
-    "    def structure(self,features,labels):\n",
+    "\n",
+    "    def structure(self, features, labels):\n",
     "        # build neurel network structure and return their predictions and loss\n",
     "        ### Variable\n",
     "        if (not self.weights) or (not self.biases):\n",
     "            self.weights = {\n",
-    "                'fc1': tf.Variable(tf.truncated_normal( shape=(self.n_features,self.n_labels) )),\n",
+    "                'fc1': tf.Variable(tf.truncated_normal(shape=(self.n_features, self.n_labels))),\n",
     "            }\n",
-    "            self.biases  = {\n",
-    "                'fc1': tf.Variable(tf.zeros( shape=(self.n_labels) )),\n",
-    "            } \n",
-    "            \n",
-    "        ### Structure   \n",
+    "            self.biases = {\n",
+    "                'fc1': tf.Variable(tf.zeros(shape=(self.n_labels))),\n",
+    "            }\n",
+    "\n",
+    "        ### Structure\n",
     "        # one fully connected layer\n",
-    "        logits = self.getDenseLayer(features,self.weights['fc1'],self.biases['fc1'])\n",
-    "        \n",
+    "        logits = self.getDenseLayer(features, self.weights['fc1'], self.biases['fc1'])\n",
+    "\n",
     "        # predictions\n",
     "        y_ = tf.nn.softmax(logits)\n",
-    "        \n",
+    "\n",
     "        # loss: softmax cross entropy\n",
     "        loss = tf.reduce_mean(\n",
-    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels,logits=logits))\n",
+    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels, logits=logits))\n",
     "\n",
-    "        return (y_,loss)\n",
-    "    \n",
-    "    def getDenseLayer(self,input_layer,weight,bias,activation=None):\n",
+    "        return (y_, loss)\n",
+    "\n",
+    "    def getDenseLayer(self, input_layer, weight, bias, activation=None):\n",
     "        # fully connected layer\n",
-    "        x = tf.add(tf.matmul(input_layer,weight),bias)\n",
+    "        x = tf.add(tf.matmul(input_layer, weight), bias)\n",
     "        if activation:\n",
     "            x = activation(x)\n",
     "        return x\n",
-    "    \n",
-    "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None):\n",
+    "\n",
+    "    def fit(self, X, y, epochs=10, validation_data=None, test_data=None):\n",
     "        X = self._check_array(X)\n",
     "        y = self._check_array(y)\n",
-    "        \n",
+    "\n",
     "        self.sess.run(self.init_op)\n",
     "        for epoch in range(epochs):\n",
-    "            print(\"Epoch %2d/%2d: \"%(epoch+1,epochs))\n",
-    "            \n",
+    "            print('Epoch %2d/%2d: ' % (epoch+1, epochs))\n",
+    "\n",
     "            # fully gradient descent\n",
     "            feed_dict = {self.train_features: X, self.train_labels: y}\n",
-    "            _ = self.sess.run(self.train_op, feed_dict=feed_dict)\n",
-    "            \n",
+    "            self.sess.run(self.train_op, feed_dict=feed_dict)\n",
+    "\n",
     "            # evaluate at the end of this epoch\n",
     "            y_ = self.predict(X)\n",
-    "            train_loss = self.evaluate(X,y)\n",
-    "            train_acc = self.accuracy(y_,y)\n",
-    "            msg = \" loss = %8.4f, acc = %3.2f%%\" % ( train_loss, train_acc*100 )\n",
-    "            \n",
+    "            train_loss = self.evaluate(X, y)\n",
+    "            train_acc = self.accuracy(y_, y)\n",
+    "            msg = ' loss = %8.4f, acc = %3.2f%%' % (train_loss, train_acc*100)\n",
+    "\n",
     "            if validation_data:\n",
-    "                val_loss = self.evaluate(validation_data[0],validation_data[1])\n",
-    "                val_acc = self.accuracy(self.predict(validation_data[0]),validation_data[1])\n",
-    "                msg += \", val_loss = %8.4f, val_acc = %3.2f%%\" % ( val_loss, val_acc*100 )\n",
-    "            \n",
+    "                val_loss = self.evaluate(validation_data[0], validation_data[1])\n",
+    "                val_acc = self.accuracy(self.predict(validation_data[0]), validation_data[1])\n",
+    "                msg += ', val_loss = %8.4f, val_acc = %3.2f%%' % (val_loss, val_acc*100)\n",
+    "\n",
     "            print(msg)\n",
-    "            \n",
+    "\n",
     "        if test_data:\n",
-    "            test_acc = self.accuracy(self.predict(test_data[0]),test_data[1])\n",
-    "            print(\"test_acc = %3.2f%%\" % (test_acc*100))\n",
-    "            \n",
+    "            test_acc = self.accuracy(self.predict(test_data[0]), test_data[1])\n",
+    "            print('test_acc = %3.2f%%' % (test_acc*100))\n",
+    "\n",
     "    def accuracy(self, predictions, labels):\n",
     "        return (np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))/predictions.shape[0])\n",
-    "    \n",
-    "    def predict(self,X):\n",
+    "\n",
+    "    def predict(self, X):\n",
     "        X = self._check_array(X)\n",
     "        return self.sess.run(self.new_y_, feed_dict={self.new_features: X})\n",
-    "    \n",
-    "    def evaluate(self,X,y):\n",
+    "\n",
+    "    def evaluate(self, X, y):\n",
     "        X = self._check_array(X)\n",
     "        y = self._check_array(y)\n",
     "        return self.sess.run(self.new_loss, feed_dict={self.new_features: X, self.new_labels: y})\n",
-    "    \n",
-    "    def _check_array(self,ndarray):\n",
+    "\n",
+    "    def _check_array(self, ndarray):\n",
     "        ndarray = np.array(ndarray)\n",
-    "        if len(ndarray.shape)==1: ndarray = np.reshape(ndarray,(1,ndarray.shape[0]))\n",
-    "        return ndarray\n",
-    "    "
+    "        if len(ndarray.shape) == 1:\n",
+    "            ndarray = np.reshape(ndarray, (1, ndarray.shape[0]))\n",
+    "        return ndarray"
    ]
   },
   {
@@ -806,14 +818,14 @@
     }
    ],
    "source": [
-    "model = SimpleLogisticClassification(n_features=28*28,\n",
-    "                                     n_labels=10,\n",
-    "                                     learning_rate= 0.5,)\n",
-    "model.fit(X=train_data.images,\n",
-    "          y=train_data.labels,\n",
-    "          epochs=10,\n",
-    "          validation_data=(valid_data.images,valid_data.labels),\n",
-    "          test_data=(test_data.images,test_data.labels), )"
+    "model = SimpleLogisticClassification(n_features=28*28, n_labels=10, learning_rate= 0.5)\n",
+    "model.fit(\n",
+    "    X=train_data.images,\n",
+    "    y=train_data.labels,\n",
+    "    epochs=10,\n",
+    "    validation_data=(valid_data.images, valid_data.labels),\n",
+    "    test_data=(test_data.images, test_data.labels),\n",
+    ")"
    ]
   }
  ],
@@ -833,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
