[feature] Run ipynb 01

--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -52,6 +52,8 @@
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+        "\n",
         "# Config the matplotlib backend as plotting inline in IPython\n",
         "%matplotlib inline"
       ],
@@ -109,11 +111,11 @@
       "metadata": {
         "id": "geqB9zFafzXp",
         "colab_type": "code",
+        "outputId": "32cdc790-f1f9-4a41-e4f3-520d1d0c7ed7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 538
-        },
-        "outputId": "4e87f976-c4a3-4912-d1a6-be017259facf"
+          "height": 191
+        }
       },
       "source": [
         "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -128,35 +130,14 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From <ipython-input-3-2b6334e0d726>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please write your own downloading logic.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use urllib or similar directly.\n",
             "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use tf.data to implement this functionality.\n",
             "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
             "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use tf.data to implement this functionality.\n",
             "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use tf.one_hot on tensors.\n",
             "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
             "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
             "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
-            "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+            "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
           ],
           "name": "stdout"
         }
@@ -179,11 +160,11 @@
       "metadata": {
         "id": "zHqPB3cPfzXw",
         "colab_type": "code",
+        "outputId": "0fe76502-f755-4823-cdfc-9639a3d4bc1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 966
-        },
-        "outputId": "62fad096-e24d-449a-a670-1a621042f10f"
+        }
       },
       "source": [
         "summary(train_data.images)"
@@ -285,11 +266,11 @@
       "metadata": {
         "id": "1iZMitxzfzX9",
         "colab_type": "code",
+        "outputId": "5d747a32-21ff-4a1e-d225-2bef7b5a1df1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "051f5404-5531-4505-810f-034eb9ed1c5b"
+        }
       },
       "source": [
         "plot_fatten_img(train_data.images[10,:])"
@@ -327,11 +308,11 @@
       "metadata": {
         "id": "7T3xY8FefzYB",
         "colab_type": "code",
+        "outputId": "e98ee934-c542-4eec-cb56-2abfb1eba2e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 273
-        },
-        "outputId": "4a24fb5e-f268-4d90-c434-ce8148ba8621"
+        }
       },
       "source": [
         "summary(train_data.labels)"
@@ -374,11 +355,11 @@
       "metadata": {
         "id": "fjQG0pT3fzYH",
         "colab_type": "code",
+        "outputId": "d178d1e5-8efa-4c27-b6e7-bbc59f83e366",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "5b6f33f3-1863-4c3a-a979-3ed07d545740"
+        }
       },
       "source": [
         "print(train_data.labels[10])"
@@ -419,11 +400,11 @@
       "metadata": {
         "id": "un0KnUEGfzYN",
         "colab_type": "code",
+        "outputId": "32e074d3-7312-43d6-abe0-35a1a6e33281",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "e7e20aff-8dbb-4652-c5f7-723f23825db5"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -604,16 +585,16 @@
       "metadata": {
         "id": "4dtZwlVrfzYe",
         "colab_type": "code",
+        "outputId": "6123477a-304d-46bf-f366-0c21b81b7665",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        },
-        "outputId": "6123477a-304d-46bf-f366-0c21b81b7665"
+        }
       },
       "source": [
         "tensor = tf.Variable(tf.truncated_normal(shape=(3, 5)))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,11 +729,11 @@
       "metadata": {
         "id": "bmwBI9VwfzYm",
         "colab_type": "code",
+        "outputId": "e2b8559f-8c89-4658-bb20-bed79674cadb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "3d34c6d2-9c91-42f1-a062-eaa001b08090"
+        }
       },
       "source": [
         "g1 = tf.Graph()\n",
@@ -764,7 +745,7 @@
         "with tf.Session(graph=g1) as sess: \n",
         "    print(sol) # print tensor, not their value"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,17 +761,17 @@
       "metadata": {
         "id": "miPCRXPxfzYo",
         "colab_type": "code",
+        "outputId": "9d05fbd2-2459-4c27-937f-9391c0445cb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "a814f5f5-be0b-48bd-9e12-7d3c32f386af"
+        }
       },
       "source": [
         "with tf.Session(graph=g1) as sess: \n",
         "    print(sol.eval()) # evaluate their value"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,17 +787,17 @@
       "metadata": {
         "id": "7nuqkaoOfzYp",
         "colab_type": "code",
+        "outputId": "bd58d823-3797-4cee-913b-18267d786256",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "5be9b90b-b11a-4248-e6a5-5d6ae7ec4553"
+        }
       },
       "source": [
         "s1 = tf.Session(graph=g1)\n",
         "print(s1.run(sol)) # another way of evaluating value"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,11 +823,11 @@
       "metadata": {
         "id": "MKzo2tA-fzYr",
         "colab_type": "code",
+        "outputId": "91c99bf7-2afe-455c-fa2b-885b53e1e877",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "ddea85e2-a85d-42fb-f64e-476c685708c1"
+        }
       },
       "source": [
         "g2 = tf.Graph()\n",
@@ -860,7 +841,7 @@
         "# if x = 2 and y = 3\n",
         "print(s2.run(sol, feed_dict={x: 2, y: 3})) "
       ],
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -876,17 +857,17 @@
       "metadata": {
         "id": "Xm2uS2QCfzYu",
         "colab_type": "code",
+        "outputId": "d54d4029-b908-476c-d425-9483f3d22f09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "027a3db9-8d64-4dc2-bd2e-7a71db90e113"
+        }
       },
       "source": [
         "# if x = 5 and y = 7\n",
         "print(s2.run(sol, feed_dict={x: 5, y: 7})) "
       ],
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,11 +1040,11 @@
       "metadata": {
         "id": "dTVeEqwRfzYx",
         "colab_type": "code",
+        "outputId": "960805d5-00a6-4cec-d83b-ab0c785d243f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
-        },
-        "outputId": "c9d3602a-ebe0-4ccf-ff20-c4f88e38a133"
+          "height": 385
+        }
       },
       "source": [
         "model = SimpleLogisticClassification(n_features=28*28, n_labels=10, learning_rate= 0.5)\n",
@@ -1075,40 +1056,32 @@
         "    test_data=(test_data.images, test_data.labels),\n",
         ")"
       ],
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From <ipython-input-19-c6ae4d142461>:57: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "\n",
-            "Future major versions of TensorFlow will allow gradients to flow\n",
-            "into the labels input on backprop by default.\n",
-            "\n",
-            "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
-            "\n",
             "Epoch  1/10: \n",
-            " loss =  10.7399, acc = 10.44%, val_loss =  10.9372, val_acc = 9.98%\n",
+            " loss =   9.2515, acc = 12.81%, val_loss =   9.4888, val_acc = 11.92%\n",
             "Epoch  2/10: \n",
-            " loss =   9.4211, acc = 11.48%, val_loss =   9.5702, val_acc = 11.22%\n",
+            " loss =   8.2946, acc = 13.89%, val_loss =   8.5156, val_acc = 13.10%\n",
             "Epoch  3/10: \n",
-            " loss =   8.4284, acc = 12.42%, val_loss =   8.5357, val_acc = 12.44%\n",
+            " loss =   7.5609, acc = 15.92%, val_loss =   7.7680, val_acc = 15.02%\n",
             "Epoch  4/10: \n",
-            " loss =   7.6835, acc = 13.64%, val_loss =   7.7580, val_acc = 13.50%\n",
+            " loss =   6.9563, acc = 18.31%, val_loss =   7.1521, val_acc = 17.44%\n",
             "Epoch  5/10: \n",
-            " loss =   7.0766, acc = 15.18%, val_loss =   7.1266, val_acc = 15.16%\n",
+            " loss =   6.4402, acc = 20.94%, val_loss =   6.6249, val_acc = 19.80%\n",
             "Epoch  6/10: \n",
-            " loss =   6.5504, acc = 17.02%, val_loss =   6.5821, val_acc = 16.82%\n",
+            " loss =   5.9915, acc = 23.35%, val_loss =   6.1650, val_acc = 22.38%\n",
             "Epoch  7/10: \n",
-            " loss =   6.0825, acc = 18.83%, val_loss =   6.0994, val_acc = 18.54%\n",
+            " loss =   5.5971, acc = 25.79%, val_loss =   5.7596, val_acc = 24.98%\n",
             "Epoch  8/10: \n",
-            " loss =   5.6625, acc = 20.76%, val_loss =   5.6672, val_acc = 20.64%\n",
+            " loss =   5.2479, acc = 28.18%, val_loss =   5.4001, val_acc = 27.30%\n",
             "Epoch  9/10: \n",
-            " loss =   5.2852, acc = 22.86%, val_loss =   5.2795, val_acc = 22.76%\n",
+            " loss =   4.9376, acc = 30.46%, val_loss =   5.0803, val_acc = 29.86%\n",
             "Epoch 10/10: \n",
-            " loss =   4.9473, acc = 25.02%, val_loss =   4.9325, val_acc = 24.56%\n",
-            "test_acc = 25.86%\n"
+            " loss =   4.6608, acc = 32.71%, val_loss =   4.7947, val_acc = 32.20%\n",
+            "test_acc = 33.58%\n"
           ],
           "name": "stdout"
         }
